finish with typescript

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "modern-normalize": "^1.1.0",
+    "nanoid": "^4.0.0",
+    "react-icons": "^4.4.0"
   }
 }
